# DataStructuresAndAlgorithms_Class

./: CMakeLists.txt  README.md  inputExample.txt
.cache/clangd/index/: idll.cpp.2597E55B3B30F66E.idx  idll.cpp.9D26FAE477A065D3.idx  idll.h.0A3C9057A79E124A.idx  idll.h.94BCDB840670C807.idx  main.cpp.4F8E6B971DB62632.idx  main.cpp.7BC255E8598D17DB.idx
EfolioA/: .clang-format  Folha resolução efolioA_21093_2023-24.docx
EfolioA/src/: idll.cpp
EfolioB/: CMakeLists.txt  test_input.txt
EfolioB/include/: maxh.h
EfolioB/src/: main.cpp  maxh.cpp
include/: idll.h
src/: idll.cpp  main.cpp
